@@ -1,6 +1,10 @@
 v3.6.11 (XXXX-XX-XX)
 --------------------
 
+* Remove HTTP "Connection" header when forwarding requests in the cluster from
+  one coordinator to another, and let the internal network layer handle closing
+  of connections and keep-alive.
+
 * Prevent a write to RocksDB during recovery in the case that the database
   already exists. The write at startup is potentially blocking, and will delay
   the startup for servers that were shut down while in a write-stopped state.
